--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
             "ui_ui_control": "nodes/ui_ui_control.js",
             "ui_template": "nodes/ui_template.js",
             "ui_link": "nodes/ui_link.js",
+            "ui_map": "nodes/ui_map.js",
             "ui_tab": "nodes/ui_tab.js",
             "ui_group": "nodes/ui_group.js"
         }
     },
     "dependencies": {
+        "leaflet": "^1.3.1",
         "serve-static": "~1.13.2",
         "socket.io": "^1.7.4"
     },
